crates/compiler/tests/snapshots/target_output_test__target_output__es2022.snap
---
source: crates/compiler/tests/target_output_test.rs
expression: "read_file(out_dir.join(\"index.mjs\"))"
---
export class ClassName {
    field = 123;
    #private = true;
    method() {
        this.#private = false;
    }
    anonMethod = ()=>{
        this.field = 456_789;
    };
    static field = 'abc';
    static{
        this.field = 'xyz';
    }
}
export async function asyncFunc(...args) {
    return Promise.resolve();
}
export function* genFunc(value = 'abc') {
    yield 1;
}
export async function* asyncGenFunc() {
    yield 'abc';
}
const obj = {
    a: 1,
    b: 2,
    c: 3
};
const { a, b, c } = obj;
const [d, e, f] = [
    1,
    2,
    3
];
const nullable = 1 ?? 2 ?? 3;
const optional = obj?.a || 0;
let assign = 0;
assign ||= a;
assign &&= b;
assign ??= b;
try {
    await import('path');
} catch  {}
// Hrmmm
export function Component() {
    return /*#__PURE__*/ React.createElement("div", null);
}

