crates/compiler/tests/snapshots/target_output_test__target_output__supports_legacy_decorators-3.snap
---
source: crates/compiler/tests/target_output_test.rs
expression: "read_file(out_dir.join(\"../tsconfig.es2018.json\"))"
---
{
  "compilerOptions": {
    "allowArbitraryExtensions": true,
    "allowImportingTsExtensions": true,
    "allowJs": true,
    "allowSyntheticDefaultImports": true,
    "declaration": true,
    "declarationMap": false,
    "emitDeclarationOnly": true,
    "esModuleInterop": true,
    "experimentalDecorators": true,
    "forceConsistentCasingInFileNames": true,
    "isolatedModules": true,
    "lib": [
      "dom",
      "es2018",
      "esnext.asynciterable"
    ],
    "module": "es2015",
    "moduleResolution": "node",
    "noEmitOnError": true,
    "outDir": "./es2018",
    "pretty": true,
    "removeComments": true,
    "resolveJsonModule": true,
    "resolvePackageJsonExports": false,
    "resolvePackageJsonImports": false,
    "rootDir": "../src",
    "skipLibCheck": true,
    "sourceMap": false,
    "strict": true,
    "target": "es2018"
  },
  "include": [
    "../src/**/*"
  ]
}
